@@ -21,7 +21,6 @@ import static org.apache.solr.util.configuration.providers.AbstractSSLCredential
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.apache.solr.util.configuration.SSLCredentialProvider;
 import org.junit.Test;
@@ -30,10 +29,10 @@ import org.junit.Test;
 public class EnvSSLCredentialProviderTest {
 
   @Test
-  public void testGetCredentials() throws Exception {
+  public void testGetCredentials() {
     int cnt = 0;
     Map<String, String> envvars =
-        ImmutableMap.of(
+        Map.of(
             EnvSSLCredentialProvider.EnvVars.SOLR_SSL_KEY_STORE_PASSWORD, "pw" + ++cnt,
             EnvSSLCredentialProvider.EnvVars.SOLR_SSL_TRUST_STORE_PASSWORD, "pw" + ++cnt,
             EnvSSLCredentialProvider.EnvVars.SOLR_SSL_CLIENT_KEY_STORE_PASSWORD, "pw" + ++cnt,
@@ -49,7 +48,7 @@ public class EnvSSLCredentialProviderTest {
   }
 
   @Test
-  public void testGetCredentialsWithEnvVars() throws Exception {
+  public void testGetCredentialsWithEnvVars() {
     EnvSSLCredentialProvider sut = new EnvSSLCredentialProvider();
     // assuming not to fail
     sut.getCredential(SSLCredentialProvider.CredentialType.SSL_KEY_STORE_PASSWORD);
